# device_comm_videostream

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: FindNDI.cmake  FindZMQ.cmake
doc/utql/Experimental/Network/: VideostreamSink.xml  VideostreamSource.xml
doc/utql/Network/: VideostreamSink.xml  VideostreamSource.xml
examples/: camera_msmf.dfg  camera_msmf.srg  conanfile.txt  nvenc_receiver.dfg  nvenc_receiver.srg  nvenc_sender.dfg  nvenc_sender.srg  nvenc_sender_msmf.dfg  nvenc_sender_msmf.srg
src/videostream/: CMakeLists.txt  VideostreamNDIContext.h  VideostreamNDISink.cpp  VideostreamNDISource.cpp  VideostreamNvencFrameHeader.h  VideostreamNvencProtocol.h  VideostreamNvencRtspSink.cpp  VideostreamNvencRtspSource.cpp  VideostreamNvencSink.cpp  VideostreamNvencSource.cpp
